updated cors-config